[tool.poetry]
name = "shonenjumpplus"
version = "0.1.0"
description = "downloader for shonenjumpplus"
authors = ["Hiroki Ishioka <ishioka0222@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
shonenjumpplus = "shonenjumpplus.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"
tqdm = "^4.64.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
